another file added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Welcome to the git world...</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse harum eveniet facilis libero tempore nulla. Asperiores deleniti animi aspernatur blanditiis ea saepe! Labore perspiciatis autem temporibus ab assumenda molestias nesciunt!</p>
 </body>
 </html>
